# forex_data_extractor

./: .gitignore  LICENSE  README.md  cli.py  config.py  export.py  models.py  pyproject.toml  requirements.txt  scraper.py  setup.py  utils.py
forex_data_extractor/: __init__.py  cli.py  config.py  export.py  models.py  scraper.py  utils.py
