[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forex-data-extractor"
version = "1.0.0"
authors = [
    {name = "kennery", email = "badoknight1@gmail.com"},
]
description = "A tool for scraping historical forex data from Yahoo Finance"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dynamic = ["dependencies"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Typing :: Typed",
]
keywords = [
    "forex",
    "currency", 
    "financial-data",
    "scraping",
    "yahoo-finance",
    "exchange-rates",
    "historical-data",
    "web-scraping",
    "playwright"
]

[project.urls]
"Homepage" = "https://github.com/yungKnight/forex_data_extractor"
"Bug Reports" = "https://github.com/yungKnight/forex_data_extractor/issues"
"Source" = "https://github.com/yungKnight/forex_data_extractor"
"Documentation" = "https://github.com/yungKnight/forex_data_extractor#readme"

[project.scripts]
forex-scraper = "forex_data_extractor.cli:main"

[tool.setuptools]
packages = ["forex_data_extractor"]
include-package-data = true
zip-safe = false
platforms = ["any"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.package-data]
forex_data_extractor = ["*.py"]

# Development tools configuration
[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''